:recycle: Refactor: Group 도메인 api 파라미터 수정
<footer>
- 관련: #97